--- a/package.json
+++ b/package.json
@@ -48,14 +48,18 @@
     "express-session": "^1.15.1",
     "faker": "^5.1.0",
     "history": "^4.9.0",
+    "leaflet": "^1.7.1",
+    "mapbox-gl": "^1.13.0",
+    "mapbox-gl-leaflet": "0.0.13",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-leaflet": "^3.0.2",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
@@ -83,6 +87,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
+    "css-loader": "^5.0.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "^5.16.0",
@@ -101,7 +106,7 @@
     "redux-mock-store": "^1.5.3",
     "simple-git": "^1.121.0",
     "supertest": "^4.0.2",
-    "webpack": "^4.16.4",
+    "webpack": "^5.6.0",
     "webpack-cli": "^3.1.0",
     "yaml": "^1.6.0"
   }
