--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.1",
     "faker": "^5.1.0",
+    "file-loader": "^6.2.0",
     "history": "^4.9.0",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^1.13.0",
@@ -66,7 +67,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.3.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
