--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-leaflet": "^3.0.2",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
