--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "axios": "^0.19.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
@@ -59,8 +61,13 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-carousel": "^4.1.0",
+    "react-calendar": "^3.2.1",
     "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
     "react-leaflet": "^3.0.2",
+    "react-leaflet-vectorgrid": "^2.2.1",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-star-ratings": "^2.3.0",
